--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,145 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>ERP Império Distribuidora</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #f4f6f9;
+    }
 
+    .sidebar {
+      width: 220px;
+      height: 100vh;
+      background: #111827;
+      color: white;
+      position: fixed;
+      padding: 20px;
+    }
+
+    .sidebar h2 {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+
+    .sidebar a {
+      display: block;
+      color: #ccc;
+      text-decoration: none;
+      margin-bottom: 15px;
+    }
+
+    .sidebar a:hover {
+      color: white;
+    }
+
+    .main {
+      margin-left: 240px;
+      padding: 30px;
+    }
+
+    .cards {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      width: 220px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.05);
+    }
+
+    .card h3 {
+      margin: 0;
+      font-size: 14px;
+      color: gray;
+    }
+
+    .card p {
+      font-size: 22px;
+      margin: 10px 0 0 0;
+      font-weight: bold;
+    }
+
+    canvas {
+      margin-top: 40px;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+    }
+
+  </style>
+</head>
+<body>
+
+<div class="sidebar">
+  <h2>Império ERP</h2>
+  <a href="#">Dashboard</a>
+  <a href="#">Produtos</a>
+  <a href="#">Clientes</a>
+  <a href="#">Pedidos</a>
+</div>
+
+<div class="main">
+  <h1>Dashboard</h1>
+
+  <div class="cards">
+    <div class="card">
+      <h3>Vendas Hoje</h3>
+      <p id="vendasHoje">R$ 0</p>
+    </div>
+
+    <div class="card">
+      <h3>Total Pedidos</h3>
+      <p id="totalPedidos">0</p>
+    </div>
+
+    <div class="card">
+      <h3>Total Clientes</h3>
+      <p id="totalClientes">0</p>
+    </div>
+
+    <div class="card">
+      <h3>Estoque Baixo</h3>
+      <p id="estoqueBaixo">0</p>
+    </div>
+  </div>
+
+  <canvas id="graficoVendas"></canvas>
+</div>
+
+<script>
+  async function carregarDashboard() {
+    const resposta = await fetch("https://erp-imperiodistribuidora.onrender.com/dashboard");
+    const dados = await resposta.json();
+
+    document.getElementById("vendasHoje").innerText = "R$ " + dados.vendas_hoje;
+    document.getElementById("totalPedidos").innerText = dados.total_pedidos;
+    document.getElementById("totalClientes").innerText = dados.total_clientes;
+    document.getElementById("estoqueBaixo").innerText = dados.produtos_estoque_baixo;
+
+    const ctx = document.getElementById("graficoVendas");
+
+    new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: ['Hoje', 'Mês'],
+        datasets: [{
+          label: 'Vendas (R$)',
+          data: [dados.vendas_hoje, dados.vendas_mes],
+        }]
+      }
+    });
+  }
+
+  carregarDashboard();
+</script>
+
+</body>
+</html>
